# scroll-da-codec-rs

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
contracts/src/core/: ProverRegistry.sol
contracts/src/interfaces/: IProverRegistry.sol
crates/app-host/: Cargo.toml
crates/app-host/abi/: IScrollChain.json  SGXVerifier.json  ScrollChain.json
crates/app-host/src/: block_tracer.rs  config.rs  event_log_fetcher.rs  event_log_parser.rs  l1_client.rs  lib.rs  prover.rs  state_manager.rs  task_manager.rs  types.rs  utils.rs
crates/app-scroll-verifier/src/: lib.rs
crates/da-codec/src/da_batch/: utils.rs
crates/executor/src/: executor.rs
crates/rpc/src/: types.rs
crates/tee/src/: attestation_report.rs  prover_registry.rs  sgx_quote_builder.rs
crates/verifier/src/: execution_node.rs  verifier.rs
testdata/: scroll-mainnet-v4-commit-338214.calldata  scroll-mainnet-v4-finalize-338214.calldata
