[package]
name = "app-host"
version.workspace = true
edition.workspace = true

[dependencies]
scroll-executor.workspace = true
scroll-da-codec.workspace = true

env_logger.workspace = true
log.workspace = true
rpc.workspace = true
alloy.workspace = true
base.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
jsonrpsee.workspace = true